fixed bootstrap card alignment issues in index.html - now fully responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,11 @@ p {
 }
 
 .section {
-    padding-top: 56px;
+    padding: 56px 40px 40px 40px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .source {
@@ -65,7 +69,7 @@ header{
 
 /* Main */
 
-main {
+#common-mhi, #common-symptoms, #simple-steps-to-help{
     background-color: var(--secondary-color);
 }
 
@@ -116,8 +120,6 @@ li {
 
 .social-links a:hover i {
     color: var(--secondary-color);   /* Optional: change colour on hover */
-    
-    
 }
 
 /* grid visualisation CSS for testing */
